Bevel Tool issues #33714

Closed
opened 2012-12-31 11:31:05 +01:00 by Brian hinton · 7 comments

%%%This is the mesh tool and not the modifier.

The bevel tool has a variety of issues that I will now list and describe to the best of my abilities.

  1. The bevel offset is inconsistent between angles of a mesh. The setting can often be radically different on a vertical edge compared to a horizontal edge. I believe this might be related to scaling, since often its a mesh object that has been duplicated in edit mode, connected via bridging and the the edges give unpredictable results.

  2. Often the bevel tool ends up just creating a subdivision along a plane around the edge rather then a true "rounded bevel"

  3. I experience inconsistent (but repeatable) crashes when using the bevel tool with the repeat last command.%%%

%%%This is the mesh tool and not the modifier. The bevel tool has a variety of issues that I will now list and describe to the best of my abilities. 1. The bevel offset is inconsistent between angles of a mesh. The setting can often be radically different on a vertical edge compared to a horizontal edge. I believe this might be related to scaling, since often its a mesh object that has been duplicated in edit mode, connected via bridging and the the edges give unpredictable results. 2. Often the bevel tool ends up just creating a subdivision along a plane around the edge rather then a true "rounded bevel" 3. I experience inconsistent (but repeatable) crashes when using the bevel tool with the repeat last command.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%I can look at this, but I need more details about how to repeat these. It would be best to attach a .blend that, upon beveling, exhibits the problems you are reporting. Thanks.%%%

%%%I can look at this, but I need more details about how to repeat these. It would be best to attach a .blend that, upon beveling, exhibits the problems you are reporting. Thanks.%%%
Author

%%%http://www.pasteall.org/blend/18516

This .blend illustrates issues 1 and 2.

And 1,2 and 3 can be replicated by doing the following:

(world settings are configured to metric) Perform a bevel on the bottom edges of model on the left with .300 offset and 6 segments. You will see the flat-like "bevel" on the first model. (problem 2) Select the same area on the model rotated on the right. Click repeat last command. (this illustrates problem 1 and the scaling change of the bevel using the same settings.) Next select any area on either meshes and click repeat last command. (Blender will crash.)
%%%

%%%http://www.pasteall.org/blend/18516 This .blend illustrates issues 1 and 2. And 1,2 and 3 can be replicated by doing the following: (world settings are configured to metric) Perform a bevel on the bottom edges of model on the left with .300 offset and 6 segments. You will see the flat-like "bevel" on the first model. (problem 2) Select the same area on the model rotated on the right. Click repeat last command. (this illustrates problem 1 and the scaling change of the bevel using the same settings.) Next select any area on either meshes and click repeat last command. (Blender will crash.) %%%
Member

%%%Thanks for the .blend. I can repeat your issues and will now look at how to fix them.%%%

%%%Thanks for the .blend. I can repeat your issues and will now look at how to fix them.%%%
Member

%%%The problem is indeed related to scaling. The objects in the example blend are scaled by 0.135 in the Z direction, and 1.0 in X and Y. The bevel is uniform and round on the unscaled object, but then the scaled object looks flattened. A workaround until this is fixed would be to apply the scale transform (in the Object menu) before beveling.

But I agree that bevel should probably work as you expect without such a workaround. I want to consult with other Blender developers about the best way to do that. One way would be to pass in the X, Y, and Z scales to the bevel operator and transform the coords by those before the calculations that place vertices, and then transforming back, but this seems messy; maybe there's a better way. (By the way, fixing this would also fix another user complaint, which is that the 'offset' number isn't actually the offset in Blender units if the object has been scaled.)

The crash is a separate problem; I haven't fully debugged that yet.%%%

%%%The problem is indeed related to scaling. The objects in the example blend are scaled by 0.135 in the Z direction, and 1.0 in X and Y. The bevel is uniform and round on the unscaled object, but then the scaled object looks flattened. A workaround until this is fixed would be to apply the scale transform (in the Object menu) before beveling. But I agree that bevel should probably work as you expect without such a workaround. I want to consult with other Blender developers about the best way to do that. One way would be to pass in the X, Y, and Z scales to the bevel operator and transform the coords by those before the calculations that place vertices, and then transforming back, but this seems messy; maybe there's a better way. (By the way, fixing this would also fix another user complaint, which is that the 'offset' number isn't actually the offset in Blender units if the object has been scaled.) The crash is a separate problem; I haven't fully debugged that yet.%%%
Member

%%%OK, Sorry, but the consensus among Blender developers is that the flattening issues (1, 2) are "working as intended" -- that is, the bevel is supposed to work on the untransformed object. The other tools work this way too (e.g., "inset faces"). You need to apply the scale transform before beveling if you want the bevel or other tools to operate with measurements on the transformed object.

The crash on repeat problem has been fixed in svn rev 53532. Thanks for the report and example for reproducing it.
%%%

%%%OK, Sorry, but the consensus among Blender developers is that the flattening issues (1, 2) are "working as intended" -- that is, the bevel is supposed to work on the untransformed object. The other tools work this way too (e.g., "inset faces"). You need to apply the scale transform before beveling if you want the bevel or other tools to operate with measurements on the transformed object. The crash on repeat problem has been fixed in svn rev 53532. Thanks for the report and example for reproducing it. %%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33714
No description provided.