Fix bevel crash bug #33714.  Had to disable elem tag on new vertices.